Tests/CompilerTests/negative/argument-labels.hylo
//! no-std

struct A { memberwise init }

fun one(x: A) {}
fun one(x: A, y: A) {}

fun main() {
  one(y: A())
}
