Tests/CompilerTests/negative/argument-labels.expected
negative/argument-labels.hylo:7.3-6: error: no candidate matches the argument list
  one(y: A())
  ~~~
negative/argument-labels.hylo:3.5-8: note: incompatible labels: found '(x:)', expected '(y:)'
fun one(x: A) {}
    ~~~
negative/argument-labels.hylo:4.5-8: note: incompatible labels: found '(x:y:)', expected '(y:)'
fun one(x: A, y: A) {}
    ~~~
